<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >

    <TextView
        style="@style/label"
        android:text="@string/username"/>

    <EditText
        style="@style/editText"
        android:hint="@string/username_hint"
        android:id="@+id/userName"
        />

    <TextView
        style="@style/label"
        android:text="@string/password"/>

    <EditText
        style="@style/editText"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:id="@+id/password"
        />

    <TextView
        style="@style/label"
        android:text="@string/domain"/>

    <EditText
        style="@style/editText"
        android:hint="@string/domain_hint"
        android:id="@+id/domain"
        />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/login_account"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/loginBtn"
        />

</LinearLayout>