<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/callNumber"
        android:layout_marginBottom="8dp"
        android:hint="@string/call_hint"
        android:textColor="@android:color/white"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:id="@+id/callBtn"
        android:enabled="false"
        android:text="@string/call"
        android:textColor="@android:color/white"
        />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/callEnd"
        android:text="@string/callEnd"
        android:textColor="@android:color/white"
        />

</LinearLayout>
